src/test/ui/underscore-lifetime/dyn-trait-underscore.stderr
error[E0758]: cannot infer an appropriate lifetime
  --> $DIR/dyn-trait-underscore.rs:8:20
   |
LL | fn a<T>(items: &[T]) -> Box<dyn Iterator<Item=&T>> {
   |                ---- this data with an anonymous lifetime `'_`...
LL |     //                      ^^^^^^^^^^^^^^^^^^^^^ bound *here* defaults to `'static`
LL |     Box::new(items.iter())
   |     ---------------^^^^--- ...is captured and required live as long as `'static` here
   |
help: to permit non-static references in a trait object value, you can add an explicit bound for an anonymous lifetime `'_`
   |
LL | fn a<T>(items: &[T]) -> Box<dyn Iterator<Item=&T> + '_> {
   |                                                   ^^^^

error: aborting due to previous error

